[gd_scene load_steps=27 format=2]

[ext_resource path="res://ProceduralMapGenerator/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Shader/Rectangle 1.png" type="Texture" id=2]
[ext_resource path="res://Bullet/Bacteria_Particles.png" type="Texture" id=3]
[ext_resource path="res://World/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://World/Levels/Level1/Level1.gd" type="Script" id=5]
[ext_resource path="res://World/NextLevelNode/NextLevel.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/BackgroundSounds/Music - Level 1.ogg" type="AudioStream" id=7]
[ext_resource path="res://MenuItems/Transition/Transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://Bacteria/Bacteria.tscn" type="PackedScene" id=9]
[ext_resource path="res://ScreenShake.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Door/Door.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://World/Fonts/Pixeled.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Crystal/Crystal.png" type="Texture" id=16]
[ext_resource path="res://World/Heart.png" type="Texture" id=17]
[ext_resource path="res://MenuItems/Notification.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Level1" type="Node2D"]
script = ExtResource( 5 )

[node name="Map" type="Node2D" parent="."]

[node name="Shadows" type="CanvasModulate" parent="Map"]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="Background" type="ColorRect" parent="Map"]
margin_left = -4666.0
margin_top = -4553.67
margin_right = 7908.0
margin_bottom = 4621.33
color = Color( 0.0313726, 0.0901961, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="Map"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -851951, 0, 1, -851950, 0, 2, -851949, 0, 2, -851948, 0, 2, -851947, 0, 2, -851946, 0, 2, -851945, 0, 3, -786415, 0, 196608, -786414, 0, 65538, -786413, 0, 65538, -786412, 0, 65538, -786411, 0, 0, -786410, 0, 65538, -786409, 0, 196612, -720879, 0, 196608, -720878, 2, 2, -720877, 0, 196610, -720876, 0, 196610, -720875, 0, 196610, -720874, 0, 196610, -720873, 0, 196612, -655343, 0, 196608, -655342, 0, 196610, -655341, 0, 196610, -655340, 2, 65540, -655339, 0, 196610, -655338, 0, 196610, -655337, 0, 196612, -589807, 0, 327681, -589806, 0, 262145, -589805, 0, 196610, -589804, 0, 196610, -589803, 0, 196610, -589802, 0, 262147, -589801, 0, 327683, -524270, 0, 327681, -524269, 0, 262145, -524268, 0, 196610, -524267, 0, 262147, -524266, 0, 327683, -458733, 0, 196608, -458732, 0, 196610, -458731, 0, 196612, -393197, 0, 196608, -393196, 0, 196610, -393195, 0, 196612, -327661, 0, 196608, -327660, 0, 196610, -327659, 0, 196612, -262131, 0, 65536, -262130, 0, 2, -262129, 0, 2, -262128, 0, 2, -262127, 0, 2, -262126, 0, 2, -262125, 0, 65537, -262124, 0, 196610, -262123, 0, 65539, -262122, 0, 65540, -196595, 0, 196608, -196594, 0, 65538, -196593, 0, 65538, -196592, 0, 65538, -196591, 0, 0, -196590, 0, 65538, -196589, 0, 131073, -196588, 0, 196610, -196587, 0, 131075, -196586, 0, 196612, -131059, 0, 196608, -131058, 0, 196610, -131057, 0, 196610, -131056, 0, 196610, -131055, 0, 196610, -131054, 0, 196610, -131053, 0, 196610, -131052, 0, 196610, -131051, 0, 196610, -131050, 0, 196612, -65523, 0, 196608, -65522, 2, 2, -65521, 0, 196610, -65520, 0, 196610, -65519, 0, 196610, -65518, 0, 196610, -65517, 0, 196610, -65516, 0, 196610, -65515, 2, 4, -65514, 0, 196612, 0, 0, 65536, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 2, 13, 0, 65537, 14, 0, 196610, 15, 0, 196610, 16, 0, 196610, 17, 0, 196610, 18, 0, 196610, 19, 0, 196610, 20, 0, 196610, 21, 0, 196610, 22, 0, 196612, 65536, 0, 196608, 65537, 0, 0, 65538, 0, 65538, 65539, 0, 0, 65540, 0, 0, 65541, 0, 65538, 65542, 0, 65538, 65543, 0, 0, 65544, 0, 65538, 65545, 0, 65538, 65546, 0, 65538, 65547, 0, 65538, 65548, 0, 65538, 65549, 0, 131073, 65550, 0, 196610, 65551, 0, 196610, 65552, 2, 4, 65553, 0, 196610, 65554, 0, 196610, 65555, 0, 196610, 65556, 0, 196610, 65557, 0, 196610, 65558, 0, 196612, 131072, 0, 196608, 131073, 0, 196610, 131074, 0, 196610, 131075, 0, 196610, 131076, 0, 196610, 131077, 0, 196610, 131078, 0, 196610, 131079, 0, 196610, 131080, 0, 196610, 131081, 0, 196610, 131082, 2, 4, 131083, 0, 196610, 131084, 0, 196610, 131085, 0, 196610, 131086, 0, 196610, 131087, 0, 196610, 131088, 0, 196610, 131089, 0, 196610, 131090, 0, 196610, 131091, 0, 196610, 131092, 0, 196610, 131093, 0, 196610, 131094, 0, 196612, 196608, 0, 196608, 196609, 0, 196610, 196610, 0, 196610, 196611, 2, 2, 196612, 0, 196610, 196613, 0, 196610, 196614, 0, 196610, 196615, 0, 196610, 196616, 0, 196610, 196617, 0, 196610, 196618, 0, 196610, 196619, 0, 196610, 196620, 0, 196610, 196621, 0, 196610, 196622, 0, 196610, 196623, 0, 196610, 196624, 0, 196610, 196625, 0, 196610, 196626, 0, 196610, 196627, 2, 2, 196628, 0, 196610, 196629, 0, 196610, 196630, 0, 196612, 262144, 0, 327681, 262145, 0, 327682, 262146, 0, 327682, 262147, 0, 327682, 262148, 0, 327682, 262149, 0, 327682, 262150, 0, 327682, 262151, 0, 327682, 262152, 0, 327682, 262153, 0, 327682, 262154, 0, 327682, 262155, 0, 327682, 262156, 0, 327682, 262157, 0, 262145, 262158, 0, 196610, 262159, 0, 196610, 262160, 0, 196610, 262161, 0, 196610, 262162, 0, 196610, 262163, 0, 196610, 262164, 0, 196610, 262165, 0, 196610, 262166, 0, 196612, 327693, 0, 196608, 327694, 0, 196610, 327695, 0, 196610, 327696, 0, 196610, 327697, 0, 196610, 327698, 2, 2, 327699, 0, 196610, 327700, 0, 196610, 327701, 0, 196610, 327702, 0, 196612, 393229, 0, 196608, 393230, 0, 196610, 393231, 0, 196610, 393232, 0, 196610, 393233, 0, 196610, 393234, 2, 3, 393235, 0, 196610, 393236, 0, 196610, 393237, 2, 4, 393238, 0, 196612, 458765, 0, 196608, 458766, 2, 2, 458767, 0, 196610, 458768, 0, 196610, 458769, 0, 196610, 458770, 0, 196610, 458771, 0, 196610, 458772, 0, 196610, 458773, 0, 196610, 458774, 0, 196612, 524301, 0, 327681, 524302, 0, 327682, 524303, 0, 327682, 524304, 0, 327682, 524305, 0, 327682, 524306, 0, 327682, 524307, 0, 327682, 524308, 0, 327682, 524309, 0, 327682, 524310, 0, 327683 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.149902
margin_right = 0.149902
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="UI/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.8774
margin_top = -52.6277
margin_right = 31.1226
margin_bottom = -1.62775
custom_fonts/font = SubResource( 1 )
text = "3"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletSprite" type="AnimatedSprite" parent="UI/HUD"]
position = Vector2( -95.1522, -24.4901 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Crystals" type="Label" parent="UI/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -52.0
margin_right = 2.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalSprite" type="AnimatedSprite" parent="UI/HUD"]
position = Vector2( -163.956, -22.6682 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
playing = true

[node name="Health" type="Label" parent="UI/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -283.687
margin_top = -79.1922
margin_right = -183.687
margin_bottom = 25.8078
custom_fonts/font = SubResource( 1 )
text = "100/100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="AnimatedSprite" parent="UI/HUD"]
position = Vector2( -309.412, -23.0233 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="Notification" parent="UI" instance=ExtResource( 18 )]

[node name="YSort - Entities" type="YSort" parent="."]

[node name="Player" parent="YSort - Entities" instance=ExtResource( 14 )]
position = Vector2( 71.466, 91.131 )

[node name="Camera2D" type="Camera2D" parent="YSort - Entities/Player"]
current = true
zoom = Vector2( 0.4, 0.4 )
script = ExtResource( 4 )

[node name="ScreenShake" parent="YSort - Entities/Player/Camera2D" instance=ExtResource( 10 )]

[node name="Light2D3" type="Light2D" parent="YSort - Entities/Player"]
position = Vector2( -0.730362, -0.541519 )
scale = Vector2( 1.89229, 1.89229 )
texture = ExtResource( 2 )
energy = 1.3

[node name="Enemies" type="YSort" parent="YSort - Entities"]
position = Vector2( 14.9641, 6.80182 )

[node name="Area1" type="YSort" parent="YSort - Entities/Enemies"]

[node name="Bacteria" parent="YSort - Entities/Enemies/Area1" instance=ExtResource( 9 )]
position = Vector2( 502.375, -42.1857 )

[node name="Bacteria2" parent="YSort - Entities/Enemies/Area1" instance=ExtResource( 9 )]
position = Vector2( 636.557, -16.2104 )

[node name="Bacteria4" parent="YSort - Entities/Enemies/Area1" instance=ExtResource( 9 )]
position = Vector2( 640.514, 181.304 )

[node name="Bacteria3" parent="YSort - Entities/Enemies/Area1" instance=ExtResource( 9 )]
position = Vector2( 521.456, 202.342 )

[node name="SFX" type="Node2D" parent="."]

[node name="MusicBG" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource( 13 )]
position = Vector2( 655.711, -86.3489 )

[node name="NextLevelArea" parent="." instance=ExtResource( 6 )]
position = Vector2( 654.902, -303.744 )
nextLevel = "res://World/Levels/Level2/Level2.tscn"

[node name="Transition" parent="." instance=ExtResource( 8 )]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -838.0
margin_top = -1093.0
margin_right = 1835.0
margin_bottom = 1205.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="AmmoChange" from="YSort - Entities/Player" to="." method="_on_Player_AmmoChange"]
[connection signal="CrystalCollectedChange" from="YSort - Entities/Player" to="." method="_on_Player_CrystalCollectedChange"]
[connection signal="HealthChange" from="YSort - Entities/Player" to="." method="_on_Player_HealthChange"]
